[package]
name = "rnd_gen_gui"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

web-view = { version = "0.7" }
anyhow = "1.0.38"
rand = "0.8.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"