[package]
name = "queuing_generator"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

web-view = { git = "https://github.com/Boscop/web-view", branch="master", features = ["edge"]  }
anyhow = "1.0.38"
rand = "0.8.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

utils = { path = "../utils" }
